--- a/stay240/index.html
+++ b/stay240/index.html
@@ -1,4 +1,4 @@
-complete_html_code = '''<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="ko">
 <head>
 <meta charset="UTF-8" />
@@ -184,4 +184,4 @@ complete_html_code = '''<!DOCTYPE html>
 </div>
 
 </body>
-</html>'''
+</html>
