--- a/stay240/index.html
+++ b/stay240/index.html
@@ -128,6 +128,7 @@
   <p>본 매물은 주거와 사업을 동시에 영위할 수 있으며, 은퇴 후 안정적인 생활을 고려하는 분들께도 적합합니다.</p>
   <img src="https://gi.esmplus.com/ssss2224/jhstory2224/stay240_2.jpg" alt="상가주택 내부1" />
   <img src="https://gi.esmplus.com/ssss2224/jhstory2224/stay240_6.jpg" alt="상가주택 내부2" />
+  <img src="https://gi.esmplus.com/ssss2224/jhstory2224/stay240_4.jpg" alt="상가주택 내부3" />
 </div>
 
 <hr />
