--- a/stay240/index.html
+++ b/stay240/index.html
@@ -184,6 +184,12 @@
   주소: 경기도 양평군 용문면 중원산로 240, 201호 A-1<br /> 
   대표자: 공인중개사 신용철<br />
   중개사무소 연락처: 031-775-0400,010-2782-4404</p>
+
+  <p style="margin-top: 20px;">
+  👉 <a href="https://jhstory.co.kr" style="color: white; font-weight: bold; text-decoration: underline;">
+    다른 매물 보기 (jhstory.co.kr)
+  </a>
+</p>
 </div>
 
 </body>
