--- a/index.html
+++ b/index.html
@@ -110,11 +110,11 @@
   <footer>
     <div class="footer-inner">
     <div class="footer-business-info">
-      사업자번호: 132-16-43379<br>
-      등록번호: 제41830-2015-00002<br>
-      주소: 경기도 양평군 용문면 중원산로 240, 201호 A-1<br>
-      대표자: 공인중개사 신용철<br>
-      중개사무소 연락처: 031-775-0400, 010-2782-4404
+      사업자번호:132-16-43379<br>
+      등록번호:제41830-2015-00002<br>
+      주소:경기도 양평군 용문면 중원산로 240,201호 A-1<br>
+      대표자:공인중개사 신용철<br>
+      중개사무소 연락처:031-775-0400, 010-2782-4404
     </div>
     <div class="footer-copy">
       &copy; 2025 조현스토리. All rights reserved.
