--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
       padding: 0;
     }
     header {
-      background-color: #2a5d84;
-      color: white;
-      padding: 30px 20px;
-      text-align: center;
+  background: url('main_visual_updated.jpg') center/cover no-repeat;
+  color: white;
+  padding: 100px 20px;
+  text-align: center;
+}
+
     }
     header h1 {
       margin: 0;
