--- a/index.html
+++ b/index.html
@@ -12,16 +12,18 @@
       padding: 0;
     }
     header {
-  background: url('main_visual_updated.jpg') center/cover no-repeat;
-  color: white;
-  padding: 100px 20px;
-  text-align: center;
-}
-
+      background: url('main_visual_updated.jpg') center/cover no-repeat;
+      color: white;
+      padding: 100px 20px;
+      text-align: center;
     }
     header h1 {
       margin: 0;
       font-size: 2rem;
+      text-shadow: 1px 1px 4px rgba(0,0,0,0.4);
+    }
+    header p {
+      text-shadow: 1px 1px 3px rgba(0,0,0,0.3);
     }
     .container {
       max-width: 1000px;
@@ -73,7 +75,6 @@
       color: #aaa;
     }
   </style>
- 
 </head>
 <body>
   <header>
@@ -93,17 +94,17 @@
   </div>
   <footer>
     <div class="footer-inner">
-    <div class="footer-business-info">
-      사업자번호:132-16-43379<br>
-      등록번호:제41830-2015-00002<br>
-      주소:경기도 양평군 용문면 중원산로 240,201호 A-1<br>
-      대표자:공인중개사 신용철<br>
-      중개사무소 연락처:031-775-0400, 010-2782-4404
+      <div class="footer-business-info">
+        사업자번호:132-16-43379<br>
+        등록번호:제41830-2015-00002<br>
+        주소:경기도 양평군 용문면 중원산로 240,201호 A-1<br>
+        대표자:공인중개사 신용철<br>
+        중개사무소 연락처:031-775-0400, 010-2782-4404
+      </div>
+      <div class="footer-copy">
+        &copy; 2025 조현스토리. All rights reserved.
+      </div>
     </div>
-    <div class="footer-copy">
-      &copy; 2025 조현스토리. All rights reserved.
-    </div>
-  </div>
   </footer>
 </body>
 </html>
