--- a/index.html
+++ b/index.html
@@ -12,18 +12,24 @@
       padding: 0;
     }
     header {
-      background: url('main_visual_updated.jpg') center/cover no-repeat;
+      background: url('main_visual_final.jpg') center/cover no-repeat;
       color: white;
-      padding: 100px 20px;
+      height: 420px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
       text-align: center;
     }
     header h1 {
       margin: 0;
-      font-size: 2rem;
-      text-shadow: 1px 1px 4px rgba(0,0,0,0.4);
+      font-size: 2.8rem;
+      text-shadow: 1px 1px 5px rgba(0,0,0,0.5);
     }
     header p {
-      text-shadow: 1px 1px 3px rgba(0,0,0,0.3);
+      font-size: 1.1rem;
+      margin-top: 10px;
+      text-shadow: 1px 1px 3px rgba(0,0,0,0.4);
     }
     .container {
       max-width: 1000px;
