--- a/house1/index.html
+++ b/house1/index.html
@@ -178,8 +178,16 @@
 </div>
 
 <div class="footer">
+<div class="footer">
   <p>© 2025 조현스토리. All rights reserved.</p>
-  <p>사업자등록번호: 132-16-43379 ｜ 등록번호: 제41830-2015-00002</p>
+  <p>
+    조현스토리 공인중개사사무소<br />
+    사업자번호: 132-16-43379<br />
+    등록번호: 제41830-2015-00002<br />
+    주소: 경기도 양평군 용문면 중원산로 240, 201호 A-1<br />
+    대표자: 공인중개사 신용철<br />
+    중개사무소 연락처: 031-775-0400, 010-2782-4404
+  </p>
 </div>
 
 </body>
