--- a/house1/index.html
+++ b/house1/index.html
@@ -78,7 +78,7 @@
   <div class="section">
     <h2>📌 기본 정보</h2>
     <ul>
-      <li><strong>소재지:</strong> 경기도 양평군 용문면 조현리 13-12, 13-13 외 1필지</li>
+      <li><strong>소재지:</strong> 경기도 양평군 용문면 조현리 13-12외 1필지</li>
       <li><strong>지목 / 용도지역:</strong> 대지 / 계획관리지역</li>
       <li><strong>면적:</strong> 대지 992㎡ (약 300평) / 건물 198㎡ (1층 90㎡ + 2층 108㎡)</li>
       <li><strong>건축 구조:</strong> 철근콘크리트 / 2층</li>
@@ -182,9 +182,9 @@
   <p>© 2025 조현스토리. All rights reserved.</p>
   <p>
     조현스토리 공인중개사사무소<br />
-    사업자번호: 132-16-43379<br />
-    등록번호: 제41830-2015-00002<br />
-    주소: 경기도 양평군 용문면 중원산로 240, 201호 A-1<br />
+    사업자번호:132-16-43379<br />
+    등록번호:제41830-2015-00002<br />
+    주소:경기도 양평군 용문면 중원산로 240,201호 A-1<br />
     대표자: 공인중개사 신용철<br />
     중개사무소 연락처: 031-775-0400, 010-2782-4404
   </p>
