--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
   <div class="card">
   <div class="card-content">
     <h3>전원주택 (조현리)</h3>
-    <p>경기도 양평군 용문면 조현리 13-12, 13-13</p>
+    <p>경기도 양평군 용문면 조현리 13-12외 1필지</p>
     <a href="house1/index.html">자세히 보기 →</a>
   </div>
 </div>
