--- a/index.html
+++ b/index.html
@@ -104,7 +104,13 @@
     <a href="house1/index.html">자세히 보기 →</a>
   </div>
 </div>
+<div class="card">
+  <div class="card-content">
+    <h3>임야 매물 (조현리)</h3>
+    <p>경기도 양평군 용문면 조현리 산8번지 일원</p>
+    <a href="forest/index.html">자세히 보기 →</a>
   </div>
+</div>
   <footer>
     <div class="footer-inner">
       <div class="footer-business-info">
