--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
   <div class="card-content">
     <h3>임야 매물 (조현리)</h3>
     <p>경기도 양평군 용문면 조현리 산8번지 일원</p>
-    <a href="forest/index.html">자세히 보기 →</a>
+    <a href="mountain/index.html">자세히 보기 →</a>
   </div>
 </div>
   <footer>
