--- a/mountain/index.html
+++ b/mountain/index.html
@@ -87,7 +87,7 @@
     <ul>
       <li><strong>전체 매매가:</strong> 3.3㎡당 60만 원 / 총 78억 원</li>
       <li><strong>분할 매매가:</strong> 도로 접 5,000㎡(약 1,500평) → 3.3㎡당 70만 원 / 총 10억 5천만 원</li>
-      <li><strong>거래형태:</strong> 매매</li>
+      <li><strong>거래형태:</strong> 매매 (현장 확인 및 협의 가능)</li>
     </ul>
   </div>
 
