--- a/mountain/index.html
+++ b/mountain/index.html
@@ -76,7 +76,7 @@
     <ul>
       <li><strong>소재지:</strong> 경기도 양평군 용문면 조현리 산8번지(9필지) 일원</li>
       <li><strong>지목 / 용도지역:</strong> 임야 / 보전관리지역</li>
-      <li><strong>면적:</strong> 총 43,302㎡ (약 13,000평) – 도로 포함 약 1,000평</li>
+      <li><strong>면적:</strong> 총 43,302㎡ (약 13,000평) – 도로 약 1,000평 포함</li>
       <li><strong>방향:</strong> 남향</li>
       <li><strong>현 이용상황:</strong> 밤나무 1,500주, 두릅 등 임산물 식재</li>
     </ul>
@@ -87,7 +87,7 @@
     <ul>
       <li><strong>전체 매매가:</strong> 3.3㎡당 60만 원 / 총 78억 원</li>
       <li><strong>분할 매매가:</strong> 도로 접 5,000㎡(약 1,500평) → 3.3㎡당 70만 원 / 총 10억 5천만 원</li>
-      <li><strong>거래형태:</strong> 매매 (현장 확인 및 협의 가능)</li>
+      <li><strong>거래형태:</strong> 매매 (본 매물은 타 부동산 연계하여 계약진행 예정입니다.)</li>
     </ul>
   </div>
 
