--- a/house1/index.html
+++ b/house1/index.html
@@ -90,7 +90,7 @@
     <h2>💰 매매 조건</h2>
     <ul>
       <li><strong>매매가:</strong> 78,000만 원</li>
-      <li><strong>거래형태:</strong> 매매 (현장 확인 및 협의 가능)</li>
+      <li><strong>거래형태:</strong> 매매 (본 매물은 타 부동산 연계하여 계약진행 예정)</li>
       <li><strong>입주 가능일:</strong> 협의 가능</li>
       <li><strong>관리비:</strong> 별도 없음</li>
     </ul>
