--- a/house1/index.html
+++ b/house1/index.html
@@ -80,7 +80,7 @@
     <ul>
       <li><strong>소재지:</strong> 경기도 양평군 용문면 조현리 13-12외 1필지</li>
       <li><strong>지목 / 용도지역:</strong> 대지 / 계획관리지역</li>
-      <li><strong>면적:</strong> 대지 992㎡ (약 300평) / 건물 198㎡ (1층 90㎡ + 2층 108㎡)</li>
+      <li><strong>면적:</strong> 대지 992㎡ (약 300평) / 건물 198㎡ (60평 1층 90㎡ + 2층 108㎡)</li>
       <li><strong>건축 구조:</strong> 철근콘크리트 / 2층</li>
       <li><strong>사용 승인일:</strong> 2022.11.22</li>
     </ul>
