--- a/mountain/index.html
+++ b/mountain/index.html
@@ -95,7 +95,7 @@
     <h2>🌟 매물의 장점</h2>
     <ul>
       <li>✔️ 2차선 접도 토지로 개발 용도 활용 용이</li>
-      <li>✔️ 애견펜션, 캠핑장, 연수원, 펜션, 야영장 등 다용도 가능</li>
+      <li>✔️ 요양원, 애견펜션, 캠핑장, 연수원, 펜션, 야영장, 수목장 등 다용도 가능</li>
       <li>✔️ 조현초 도보 거리, 생활권 접근 우수</li>
       <li>✔️ 눈이 와도 통행 걱정 없는 안정적인 도로망</li>
       <li>✔️ 경사 완만하고 주변 오염원 없음</li>
