--- a/stay240/index.html
+++ b/stay240/index.html
@@ -77,7 +77,7 @@
     <li>2층 사무소(79.25㎡) - 월세, 일반음식점(158.96㎡) - 월세 수익</li>
     <li>3층 단독주택(171.16㎡)</li>
   </ul>
-  <p>1층 편의점은 매수자가 직접 운영하는 것을 적극 권장드리며, 현재 와이프가 운영하고 있습니다.<br />
+  <p>1층 편의점은 매수자가 직접 운영하는 것을 적극 권장드리며, 현재 건물주주가 운영하고 있습니다.<br />
   안정적인 수익과 함께 자영업 운영을 통한 추가 이익 창출이 가능한 구조입니다.</p>
   <img src="https://gi.esmplus.com/ssss2224/jhstory2224/stay240_3.jpg" alt="상가주택 전경" />
 </div>
