--- a/mountain/index.html
+++ b/mountain/index.html
@@ -107,6 +107,7 @@
     <h2>📸 현장 사진</h2>
     <div class="gallery">
       <img src="https://gi.esmplus.com/ssss2224/moutain/M10.jpg" alt="현장 사진">
+<img src="https://gi.esmplus.com/ssss2224/moutain/M11.jpg" alt="현장 사진">
 <img src="https://gi.esmplus.com/ssss2224/moutain/M9.jpg" alt="현장 사진">
 <img src="https://gi.esmplus.com/ssss2224/moutain/M6.jpg" alt="현장 사진">
 <img src="https://gi.esmplus.com/ssss2224/moutain/M5.jpg" alt="현장 사진">
